--- a/templates/physical.hpp.in
+++ b/templates/physical.hpp.in
@@ -32,6 +32,8 @@ namespace flexiblesusy {
 struct @ModelName@_physical {
    @ModelName@_physical();
    void clear();
+   void convert_to_hk();   ///< converts pole masses to HK convention
+   void convert_to_slha(); ///< converts pole masses to SLHA convention
    void print(std::ostream&) const;
 
 @physicalMassesDef@
