--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -59,7 +59,7 @@ public:
 
    void fill(QedQcd& qedqcd) const { slha_io.fill(qedqcd); }
    void fill(@ModelName@_input_parameters&) const;
-   void fill(@ModelName@_imodel&) const;
+   void fill(@ModelName@_mass_eigenstates&) const;
    template <class T> void fill(@ModelName@_slha<T>&) const;
    void fill(Spectrum_generator_settings&) const;
    double get_parameter_output_scale() const;
@@ -99,7 +99,7 @@ private:
    void set_ckm(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    void set_pmns(const Eigen::Matrix<std::complex<double>,3,3>&, double);
    double read_scale() const;
-   void fill_drbar_parameters(@ModelName@_imodel&) const;
+   void fill_drbar_parameters(@ModelName@_mass_eigenstates&) const;
    void fill_physical(@ModelName@_physical&) const;
 };
 
@@ -110,7 +110,7 @@ private:
 template <class T>
 void @ModelName@_slha_io::fill(@ModelName@_slha<T>& model) const
 {
-   fill(static_cast<@ModelName@_imodel&>(model));
+   fill(static_cast<@ModelName@_mass_eigenstates&>(model));
    fill_physical(model.get_physical_slha());
 }
 
