--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -40,7 +40,7 @@ using namespace @ModelName@_info;
 
 CLASSNAME::@ModelName@(const @ModelName@_input_parameters& input_)
    : Two_scale_model()
-   , @ModelName@_imodel(input_)
+   , @ModelName@_mass_eigenstates(input_)
 {
 }
 
@@ -50,32 +50,32 @@ CLASSNAME::~@ModelName@()
 
 void CLASSNAME::calculate_spectrum()
 {
-   @ModelName@_imodel::calculate_spectrum();
+   @ModelName@_mass_eigenstates::calculate_spectrum();
 }
 
 void CLASSNAME::clear_problems()
 {
-   @ModelName@_imodel::clear_problems();
+   @ModelName@_mass_eigenstates::clear_problems();
 }
 
 std::string CLASSNAME::name() const
 {
-   return @ModelName@_imodel::name();
+   return @ModelName@_mass_eigenstates::name();
 }
 
 void CLASSNAME::run_to(double scale, double eps)
 {
-   @ModelName@_imodel::run_to(scale, eps);
+   @ModelName@_mass_eigenstates::run_to(scale, eps);
 }
 
 void CLASSNAME::print(std::ostream& out) const
 {
-   @ModelName@_imodel::print(out);
+   @ModelName@_mass_eigenstates::print(out);
 }
 
 void CLASSNAME::set_precision(double p)
 {
-   @ModelName@_imodel::set_precision(p);
+   @ModelName@_mass_eigenstates::set_precision(p);
 }
 
 } // namespace flexiblesusy
