Bugfix: pass MSSM-like pseudo-scalar to MSSM 2loop routines in the NMSSM
Note: To the tadpole 2-loop MSSM routines we still pass the lightest
pseudo-scalar mass, which is not necessarily the MSSM-like one in the
NMSSM.  We now do exactly the same as SoftSUSY.

--- a/model_files/SMSSM/FlexibleSUSY.m.in
+++ b/model_files/SMSSM/FlexibleSUSY.m.in
@@ -135,6 +135,9 @@ TreeLevelEWSBSolution = {
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Mu] + \[Lambda] vS / Sqrt[2];
+EffectiveBMu = (B[\[Mu]] + \[Lambda] (MS vS / Sqrt[2] + L1)
+    + T[\[Lambda]] vS / Sqrt[2] + 0.5 \[Lambda] \[Kappa] vS^2);
+EffectiveMASqr = EffectiveBMu (vu^2 + vd^2) / (vu vd);
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
 
