--- a/model_files/E6SSM/FlexibleSUSY.m.in
+++ b/model_files/E6SSM/FlexibleSUSY.m.in
@@ -98,7 +98,8 @@ InitialGuessAtLowScale = {
 InitialGuessAtHighScale = {};
 
 UseHiggs2LoopNMSSM = True;
-EffectiveMu = \[Lambda] vs / Sqrt[2];
+EffectiveMu = \[Lambda] vS / Sqrt[2];
+EffectiveMASqr = (T[\[Lambda]] vS / Sqrt[2] + 0.5 \[Lambda] \[Kappa] vS^2) (vu^2 + vd^2) / (vu vd);
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
 
