--- a/model_files/lowNMSSM/FlexibleSUSY.m.in
+++ b/model_files/lowNMSSM/FlexibleSUSY.m.in
@@ -103,6 +103,7 @@ OnlyLowEnergyFlexibleSUSY = True;
 
 UseHiggs2LoopNMSSM = True;
 EffectiveMu = \[Lambda] vS / Sqrt[2];
+EffectiveMASqr = (T[\[Lambda]] vS / Sqrt[2] + 0.5 \[Lambda] \[Kappa] vS^2) (vu^2 + vd^2) / (vu vd);
 
 PotentialLSPParticles = { Chi, Sv, Su, Sd, Se, Cha, Glu };
 
