extract spectrum from <model>_mass_eigenstates class
This makes the write_spectrum() method independent of the template
parameter.

--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -238,7 +238,7 @@ template <class T>
 void @ModelName@_spectrum_generator<T>::write_spectrum(const std::string& filename) const
 {
    @ModelName@_spectrum_plotter plotter;
-   plotter.extract_spectrum<T>(model);
+   plotter.extract_spectrum(model);
    plotter.write_to_file(filename);
 }
 
