--- a/templates/spectrum_generator.hpp.in
+++ b/templates/spectrum_generator.hpp.in
@@ -218,11 +218,11 @@ void @ModelName@_spectrum_generator<T>::run(const QedQcd& oneset,
 template <class T>
 void @ModelName@_spectrum_generator<T>::write_running_couplings(const std::string& filename) const
 {
-   @ModelName@<T> tmp_model(model);
+   @ModelName@_mass_eigenstates tmp_model(model);
    tmp_model.run_to(low_scale);
 
    @ModelName@_parameter_getter parameter_getter;
-   Coupling_monitor<@ModelName@<T>, @ModelName@_parameter_getter>
+   Coupling_monitor<@ModelName@_mass_eigenstates, @ModelName@_parameter_getter>
       coupling_monitor(tmp_model, parameter_getter);
 
    coupling_monitor.run(low_scale, high_scale, 100, true);
