--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -69,28 +69,9 @@ int main(int argc, const char* argv[])
    oneset.toMz(); // run SM fermion masses to MZ
 
    @ModelName@_spectrum_generator<algorithm_type> spectrum_generator;
-   spectrum_generator.set_precision_goal(
-      spectrum_generator_settings.get(Spectrum_generator_settings::precision));
-   spectrum_generator.set_max_iterations(
-      spectrum_generator_settings.get(Spectrum_generator_settings::max_iterations));
-   spectrum_generator.set_calculate_sm_masses(
-      spectrum_generator_settings.get(Spectrum_generator_settings::calculate_sm_masses) >= 1.0);
-   spectrum_generator.set_force_output(
-      spectrum_generator_settings.get(Spectrum_generator_settings::force_output) >= 1.0);
+   spectrum_generator.set_settings(spectrum_generator_settings);
    spectrum_generator.set_parameter_output_scale(
       slha_io.get_parameter_output_scale());
-   spectrum_generator.set_pole_mass_loop_order(
-      spectrum_generator_settings.get(Spectrum_generator_settings::pole_mass_loop_order));
-   spectrum_generator.set_ewsb_loop_order(
-      spectrum_generator_settings.get(Spectrum_generator_settings::ewsb_loop_order));
-   spectrum_generator.set_beta_loop_order(
-      spectrum_generator_settings.get(Spectrum_generator_settings::beta_loop_order));
-   spectrum_generator.set_beta_zero_threshold(
-      spectrum_generator_settings.get(Spectrum_generator_settings::beta_zero_threshold));
-   spectrum_generator.set_threshold_corrections_loop_order(
-      spectrum_generator_settings.get(Spectrum_generator_settings::threshold_corrections_loop_order));
-   spectrum_generator.set_two_loop_corrections(
-      spectrum_generator_settings.get_two_loop_corrections());
 
    spectrum_generator.run(oneset, input);
 
