--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -65,6 +65,7 @@ LIB@CLASSNAME@_HDR += \
 		$(DIR)/@CLASSNAME@_model_slha.hpp \
 		$(DIR)/@CLASSNAME@_physical.hpp \
 		$(DIR)/@CLASSNAME@_slha_io.hpp \
+		$(DIR)/@CLASSNAME@_spectrum_generator_interface.hpp \
 		$(DIR)/@CLASSNAME@_spectrum_generator.hpp \
 		$(DIR)/@CLASSNAME@_susy_scale_constraint.hpp \
 		$(DIR)/@CLASSNAME@_utilities.hpp \
