use SignedAbsSqrt in order to avoid Nans
in case of negative soft-breaking squared masses

--- a/model_files/CMSSMFPITadpole/FlexibleSUSY.m.in
+++ b/model_files/CMSSMFPITadpole/FlexibleSUSY.m.in
@@ -102,21 +102,21 @@ ExtraSLHAOutputBlocks = {
             {3, MassG},
             {21, mHd2},
             {22, mHu2},
-            {31, Sqrt[ml2[1,1]]},
-            {32, Sqrt[ml2[2,2]]},
-            {33, Sqrt[ml2[3,3]]},
-            {34, Sqrt[me2[1,1]]},
-            {35, Sqrt[me2[2,2]]},
-            {36, Sqrt[me2[3,3]]},
-            {41, Sqrt[mq2[1,1]]},
-            {42, Sqrt[mq2[2,2]]},
-            {43, Sqrt[mq2[3,3]]},
-            {44, Sqrt[mu2[1,1]]},
-            {45, Sqrt[mu2[2,2]]},
-            {46, Sqrt[mu2[3,3]]},
-            {47, Sqrt[md2[1,1]]},
-            {48, Sqrt[md2[2,2]]},
-            {49, Sqrt[md2[3,3]]} } }
+            {31, SignedAbsSqrt[ml2[1,1]]},
+            {32, SignedAbsSqrt[ml2[2,2]]},
+            {33, SignedAbsSqrt[ml2[3,3]]},
+            {34, SignedAbsSqrt[me2[1,1]]},
+            {35, SignedAbsSqrt[me2[2,2]]},
+            {36, SignedAbsSqrt[me2[3,3]]},
+            {41, SignedAbsSqrt[mq2[1,1]]},
+            {42, SignedAbsSqrt[mq2[2,2]]},
+            {43, SignedAbsSqrt[mq2[3,3]]},
+            {44, SignedAbsSqrt[mu2[1,1]]},
+            {45, SignedAbsSqrt[mu2[2,2]]},
+            {46, SignedAbsSqrt[mu2[3,3]]},
+            {47, SignedAbsSqrt[md2[1,1]]},
+            {48, SignedAbsSqrt[md2[2,2]]},
+            {49, SignedAbsSqrt[md2[3,3]]} } }
 };
 
 FSEWSBSolvers = { FPITadpole };
