enable SM 3-loop beta-functions

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -43,6 +43,7 @@ SMParticles = {
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
+UseSM3LoopRGEs = True;
 
 DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh};
