--- a/model_files/cSM/FlexibleSUSY.m.in
+++ b/model_files/cSM/FlexibleSUSY.m.in
@@ -45,6 +45,7 @@ SMParticles = {
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
+UseSM3LoopRGEs = True;
 
 DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh};
