--- a/templates/two_scale_soft_beta_.cpp.in
+++ b/templates/two_scale_soft_beta_.cpp.in
@@ -65,7 +65,7 @@ namespace flexiblesusy {
  */
 @parameterType@ @ModelName@_soft_parameters::calc_beta_@parameterName@_three_loop(const Soft_traces& soft_traces) const
 {
-   DEFINE_THIRDGENERATIONPROJECTOR(3)
+   DEFINE_PROJECTOR(3,3,3,3)
 
 @localDeclThreeLoop@
 
