--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -17,6 +17,7 @@ ENABLE_LOOPTOOLS   := @ENABLE_LOOPTOOLS@
 ENABLE_META        := @ENABLE_META@
 ENABLE_STATIC_LIBS := @ENABLE_STATIC_LIBS@
 ENABLE_THREADS     := @ENABLE_THREADS@
+ENABLE_TSIL        := @ENABLE_TSIL@
 
 # C/C++ preprocessor defines
 ENABLE_COLOR_PRINTOUT := @ENABLE_COLOR_PRINTOUT@
@@ -47,6 +48,10 @@ CPPFLAGS           := @CPPFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
 CXXFLAGS           := @CXXFLAGS@
 CXX_DEP_GEN        := @CXX_DEP_GEN@
 CXXFLAGS_DEP_GEN   := @CXXFLAGS_DEP_GEN@
+CC                 := @CC@
+CFLAGS             := @CFLAGS@ $(patsubst %,-I%,$(MODULES)) -I.
+CC_DEP_GEN         := @CC_DEP_GEN@
+CFLAGS_DEP_GEN     := @CFLAGS_DEP_GEN@
 FC                 := @FC@
 FFLAGS             := @FFLAGS@
 FLIBS              := @FLIBS@
@@ -64,6 +69,8 @@ LAPACKLIBS         := @LAPACKLIBS@
 LOOPTOOLSFLAGS     := @LOOPTOOLSFLAGS@
 LOOPTOOLSLIBS      := @LOOPTOOLSLIBS@
 THREADLIBS         := @THREADLIBS@
+TSILFLAGS          := @TSILFLAGS@
+TSILLIBS           := @TSILLIBS@
 
 ifeq ($(ENABLE_LOOPTOOLS),yes)
 LOOPFUNCFLAGS	   := $(LOOPTOOLSFLAGS)
@@ -178,6 +185,10 @@ depend:  $(ALLDEP)
 # -MT '$*.o' ensures that the target contains the full path
 	$(CXX_DEP_GEN) $(CPPFLAGS) $(CXXFLAGS_DEP_GEN) -MM -MP -MG -o $@ -MT '$*.o' $^
 
+%.d: %.c
+# -MT '$*.o' ensures that the target contains the full path
+	$(CC_DEP_GEN) $(CFLAGS) $(CFLAGS_DEP_GEN) -MM -MP -MG -o $@ -MT '$*.o' $^
+
 %.d: %.f
 # the sed script ensures that the target contains the full path
 	$(FOR_DEP_GEN) $(CPPFLAGS) -cpp -MM -MP -MG $^ -MT '$*.o' | \
@@ -230,6 +241,8 @@ showbuild:
 	@echo "LOOPFUNCFLAGS      = $(LOOPFUNCFLAGS)"
 	@echo "LOOPFUNCLIBS       = $(LOOPFUNCLIBS)"
 	@echo "THREADLIBS         = $(THREADLIBS)"
+	@echo "TSILLIBS           = $(TSILLIBS)"
+	@echo "TSILFLAGS          = $(TSILFLAGS)"
 	@echo ""
 	@echo "ENABLE_COLOR_PRINTOUT = $(ENABLE_COLOR_PRINTOUT)"
 	@echo "ENABLE_COMPILE     = $(ENABLE_COMPILE)"
@@ -241,6 +254,7 @@ showbuild:
 	@echo "ENABLE_SILENT      = $(ENABLE_SILENT)"
 	@echo "ENABLE_STATIC_LIBS = $(ENABLE_STATIC_LIBS)"
 	@echo "ENABLE_THREADS     = $(ENABLE_THREADS)"
+	@echo "ENABLE_TSIL        = $(ENABLE_TSIL)"
 	@echo "ENABLE_VERBOSE     = $(ENABLE_VERBOSE)"
 	@echo ""
 	@echo "The list of modules to be built:"
