--- a/config/config.h.in
+++ b/config/config.h.in
@@ -63,5 +63,8 @@
 /* Enable multi-threading */
 @DEFINE_ENABLE_THREADS@
 
+/* Enable tsil */
+@DEFINE_ENABLE_TSIL@
+
 /* Enable <random> header */
 @DEFINE_ENABLE_RANDOM@
