use 2-loop SM Higgs self-energies in the SM model files

--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -44,6 +44,7 @@ SMParticles = {
 
 OnlyLowEnergyFlexibleSUSY = True;
 UseSM3LoopRGEs = True;
+UseHiggs2LoopSM = True;
 
 DefaultPoleMassPrecision = MediumPrecision;
 HighPoleMassPrecision    = {hh};
