--- a/model_files/SMHighPrecision/FlexibleSUSY.m.in
+++ b/model_files/SMHighPrecision/FlexibleSUSY.m.in
@@ -42,6 +42,8 @@ SMParticles = {
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
+UseSM3LoopRGEs = True;
+UseHiggs2LoopSM = True;
 
 DefaultPoleMassPrecision = HighPrecision;
 HighPoleMassPrecision    = {};
