Bugfix: decrease assumed goldstone boson tree-level mass precision
We skip the calculation of the goldstone boson pole masses.  To
determine which mass eigenstate is a goldstone boson, we compare the
tree-level Higgs/Goldstone boson mass with the corresponding vector
boson mass.  This comparison can fail, if the precision of the
goldstone boson tree-level mass is poor.  This commit relaxes the
assumed goldstone boson tree-level mass precision to 1e-8.

--- a/templates/mass_eigenstates.cpp.in
+++ b/templates/mass_eigenstates.cpp.in
@@ -92,6 +92,7 @@ CLASSNAME::@ModelName@_mass_eigenstates(const @ModelName@_input_parameters& inpu
    , force_output(false)
    , precision(1.0e-3)
    , ewsb_iteration_precision(1.0e-5)
+   , goldstone_mass_precision(1.0e-8)
    , physical()
    , problems(@ModelName@_info::particle_names)
    , two_loop_corrections()
